add work with QuestionType, change exception